spacing fix on schedule page

--- a/css/schedule.css
+++ b/css/schedule.css
@@ -196,6 +196,10 @@ p.subtitle {
   margin: 0px;
 }
 
+#select-mornings {
+  margin-bottom: 8px;
+}
+
 #payment-information {
   width: 300px;
   font-family: "Urbanist", sans-serif;
